--- a/discover.html
+++ b/discover.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-
+    
 
 <div>   
     <div class="container">
@@ -17,6 +17,7 @@
             <div class="intro1">
                 <h1>CharityCrossing </h1>
                 <p> Charity Crossing is a non-profit organization dedicated to making a profound impact on the lives of people, animals, and more. They try to promote Volunteerism, Giving, and a sense of community. Established with a noble mission at its core, the volunteers tirelessly work towards creating positive change in communities by offering vital support, resources, and care. 
+                    <a href="https://charitycrossing.org">See more.</a> 
 
                 </p>
             </div>
@@ -32,7 +33,9 @@
             <img src="images/foodbank.png" alt="CharityCrossing">
             <div class="intro2">
                 <h1>Food Bank of Delaware</h1>
-                <p>Food Bank of Delaware is an organization that is dedicated to nourishing communities and fighting the battle against hunger across Delaware. They aspire towards a future where every individual has access to wholesome meals, empowering them to thrive. Through many dedicated volunteers, they distributed tons of food, leaving a mark in communities throughout Delaware.</p>
+                <p>Food Bank of Delaware is an organization that is dedicated to nourishing communities and fighting the battle against hunger across Delaware. They aspire towards a future where every individual has access to wholesome meals, empowering them to thrive. Through many dedicated volunteers, they distributed tons of food, leaving a mark in communities throughout Delaware.
+                    <a href="https://www.fbd.org">See more.</a>
+                </p>
             </div>
         </div>
 </div>
@@ -44,11 +47,16 @@
             <img src="images/dog.webp" alt="CharityCrossing">
             <div class="intro3">
                 <h1>Paws for People</h1>
-                <p>Paw for People is committed to providing therapeutic visits to any person in the community who would benefit from interaction with a well-trained pet. Paws for People's mission is to improve lives in our community and promote volunteering.
+                <p>Paw for People is committed to providing therapeutic visits to any person in the community who would benefit from interaction with a well-trained pet. Paws for People's mission is to improve lives in our community and promote volunteering. 
+                    <a href="https://www.pawsforpeople.org">See more.</a>
                 </p>
             </div>
         </div>
     </div>
 </div>
 
+
+
 </body>
+
+
